--- a/package.json
+++ b/package.json
@@ -20,9 +20,12 @@
     "@vitejs/plugin-vue": "^5.2.1",
     "@vitejs/plugin-vue-jsx": "^4.1.1",
     "@vue/eslint-config-prettier": "^10.2.0",
+    "bootstrap": "^5.3.3",
+    "bootstrap-vue-next": "^0.26.30",
     "eslint": "^9.20.1",
     "eslint-plugin-vue": "^9.32.0",
     "prettier": "^3.5.1",
+    "unplugin-vue-components": "^28.4.0",
     "vite": "^6.1.0",
     "vite-plugin-vue-devtools": "^7.7.2"
   }
